<resources>
    <string name="app_name">MyAlphabet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_str">PLAY</string>
    <string name="pause_str">PAUSE</string>
    <string name="Alphabeth">Alphabeth</string>
    <string name="exersize">Zhattygu</string>
    <string name="aboutUs">Zhasaushylar</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="check">Tekseru</string>
    <string name="task">Tapsyrma:</string>
    <string name="t_name">Шәріпбай А.Ә.</string>
    <string name="t_stat">т.ғ.д., Л.Н.Гумилев атындағы ЕҰУ, «Информатика және ақпараттық қауіпсіздік» кафедрасының профессоры</string>
    <string name="s_name">Әбдіқұл С.Б.</string>
    <string name="s_stat">Л.Н.Гумилев атындағы ЕҰУ-нің магистранты</string>
</resources>
