<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExrWriteActivity"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:titleTextColor="@color/mainGray"
        android:background="@drawable/action_bar_back"
        android:layout_width="match_parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutUs"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/kir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alphabeth"
            android:textSize="17sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">
        <Button
            android:id="@+id/rez"
            android:background="@drawable/ds_letter_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:orientation="vertical">
    <TextView
        android:id="@+id/lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Alphabeth"
        android:textSize="17sp"/>
    </LinearLayout>
</LinearLayout>