<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExrReadActivity"
    android:background="@color/mainWhite"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/action_bar_back"
        app:title="@string/exersize"
        app:titleTextColor="@color/mainGray">
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/task_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutUs"/>
    </LinearLayout>
    <TextView
        android:id="@+id/kir_2"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="17sp"
        android:text="@string/aboutUs"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/bolat"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">
        <Button
            android:id="@+id/rez_2"
            android:background="@drawable/ds_letter_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tekseru"/>
    </LinearLayout>
    <TextView
        android:id="@+id/lat_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="2"
        android:textSize="17sp"
        android:text="@string/aboutUs"/>
</LinearLayout>